@@ -57,7 +57,7 @@ MANPAGES += \
 	man/systemd-halt.service.8 \
 	man/systemd-inhibit.1 \
 	man/systemd-initctl.service.8 \
-	man/systemd-journald.service.8 \
+	man/journald.service.8 \
 	man/systemd-machine-id-setup.1 \
 	man/systemd-notify.1 \
 	man/systemd-remount-fs.service.8 \
@@ -272,8 +272,8 @@ man/systemd-hibernate.service.8: man/systemd-suspend.service.8
 man/systemd-hybrid-sleep.service.8: man/systemd-suspend.service.8
 man/systemd-initctl.8: man/systemd-initctl.service.8
 man/systemd-initctl.socket.8: man/systemd-initctl.service.8
-man/systemd-journald.8: man/systemd-journald.service.8
-man/journald.socket.8: man/systemd-journald.service.8
+man/systemd-journald.8: man/journald.service.8
+man/journald.socket.8: man/journald.service.8
 man/systemd-kexec.service.8: man/systemd-halt.service.8
 man/systemd-poweroff.service.8: man/systemd-halt.service.8
 man/systemd-reboot.service.8: man/systemd-halt.service.8
@@ -529,10 +529,10 @@ man/systemd-initctl.html: man/systemd-initctl.service.html
 man/systemd-initctl.socket.html: man/systemd-initctl.service.html
 	$(html-alias)
 
-man/systemd-journald.html: man/systemd-journald.service.html
+man/systemd-journald.html: man/journald.service.html
 	$(html-alias)
 
-man/journald.socket.html: man/systemd-journald.service.html
+man/journald.socket.html: man/journald.service.html
 	$(html-alias)
 
 man/systemd-kexec.service.html: man/systemd-halt.service.html
@@ -1372,7 +1372,7 @@ EXTRA_DIST += \
 	man/systemd-halt.service.xml \
 	man/systemd-inhibit.xml \
 	man/systemd-initctl.service.xml \
-	man/systemd-journald.service.xml \
+	man/journald.service.xml \
 	man/systemd-logind.service.xml \
 	man/systemd-machine-id-setup.xml \
 	man/systemd-modules-load.service.xml \
