@@ -103,7 +103,7 @@
 #define SPECIAL_DBUS_SERVICE "dbus.service"
 #define SPECIAL_DBUS_SOCKET "dbus.socket"
 #define SPECIAL_JOURNALD_SOCKET "journald.socket"
-#define SPECIAL_JOURNALD_SERVICE "systemd-journald.service"
+#define SPECIAL_JOURNALD_SERVICE "journald.service"
 
 /* Magic init signals */
 #define SPECIAL_KBREQUEST_TARGET "kbrequest.target"
