@@ -7,7 +7,7 @@
 
 [Unit]
 Description=Journal Service
-Documentation=man:systemd-journald.service(8) man:journald.conf(5)
+Documentation=man:journald.service(8) man:journald.conf(5)
 DefaultDependencies=no
 Requires=journald.socket
 After=journald.socket syslog.socket
