@@ -7,12 +7,12 @@
 
 [Unit]
 Description=Trigger Flushing of Journal to Persistent Storage
-Documentation=man:systemd-journald.service(8) man:journald.conf(5)
+Documentation=man:journald.service(8) man:journald.conf(5)
 DefaultDependencies=no
-Requires=systemd-journald.service
-After=systemd-journald.service local-fs.target remote-fs.target
+Requires=journald.service
+After=journald.service local-fs.target remote-fs.target
 Before=systemd-user-sessions.service
 
 [Service]
-ExecStart=@rootbindir@/systemctl kill --kill-who=main --signal=SIGUSR1 systemd-journald.service
+ExecStart=@rootbindir@/systemctl kill --kill-who=main --signal=SIGUSR1 journald.service
 Type=oneshot
